# pairs-trading

./: README.md  backtest.py  config.yml  cum_returns.csv  data_fetch.py  main.py  pair_selection.py  performance.py  prices.csv  pyproject.toml  results.txt  signals.csv  strat.py
